--- a/FinalProject/ClientApp/src/app/communityrankings/communityrankings.component.html
+++ b/FinalProject/ClientApp/src/app/communityrankings/communityrankings.component.html
@@ -16,6 +16,47 @@
         <tr *ngFor="let ranking of communityRankings; index as i;">
             <td>{{i + 1}} ({{ranking.rank}})</td>
             <td>{{ranking.name}}</td>
+            <td><img [src]="ranking.sprite" alt=""></td>
+            <td>{{ranking.types}}</td>
+            <td>{{ranking.originalGame}}</td>
+            <td>{{GetPokemonGenerationID(ranking.pokemonApiid)}}</td>
+
+            <!-- <td>{{PokemonRankingsComponent.totalPokemonDetailsList[ranking.pokemonApiid].sprites.front_default}}</td> -->
+
+            <td>
+                <!-- Button trigger modal -->
+                <!-- data backdrop and data keyboard make it where user can't click outside window to close modal -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-backdrop="static" data-keyboard="false">
+                  Edit
+                </button>
+                <button type="button" class="btn btn-primary" float-right m-2 data-toggle="modal" data-target="#exampleModal">
+                    Remove
+                </button>
+                
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Edit Pokemon Ranking</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close" (click)="CloseClick()">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <label for="newRank">Enter New Ranking: </label> <br>
+                        <input type="text" min="1" max="151" value="1" placeholder="enter number 1 - 151" [(ngModel)]="userRank" id="newRank"/>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" (click)="EditRankings()">Save changes</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </td>
+
+            <td></td>
             <!-- <td> <img [src]="this.commRankDetails.sprites.front_default" alt=""></td>
             <td> -->
                 <!-- <button type="button" class="btn btn-light mr-1">See Full Details</button>
