reworked delete function

--- a/FinalProject/ClientApp/src/app/delete-rank/delete-rank.component.html
+++ b/FinalProject/ClientApp/src/app/delete-rank/delete-rank.component.html
@@ -5,8 +5,8 @@
     <input type="text" [(ngModel)]="name">
     <br>
 
-    <label>Rank</label><br>
-    <input type="number" [(ngModel)]="userRank">
+    <!-- <label>Rank</label><br>
+    <input type="number" [(ngModel)]="userRank"> -->
 
 </div>
-<!-- <button (click)="RemovePokemonRanking(this.userId,userRank,name)">Remove from Ranks</button> -->
+<button (click)="DeletePokemonRanking(name)">Remove from Ranks</button>
