--- a/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
+++ b/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
@@ -3,6 +3,56 @@
     <h5 class="d-flex justify-content-center" *ngIf="loggedIn">{{currentUser.firstName}}'s Pokedex</h5>
     <h5 class="d-flex justify-content-center" *ngIf="!loggedIn">Please login to your account to view your rankings</h5>
 </div>
+
+<div class="container">
+    <nav class="navbar navbar-expand-sm bg-light navbar-dark">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <button routerLink="Home" class="m-1 btn btn-light btn-outline-primary">Home</button>
+        </li>
+        <li class="nav-item">
+          <button routerLink="Users" class="m-1 btn btn-light btn-outline-primary">Users</button>
+        </li>
+        <li class="nav-item">
+          <button routerLink="PokemonRankings" class="m-1 btn btn-light btn-outline-primary">Pokemon Rankings</button>
+        </li>
+        <li class="nav-item">
+          <button routerLink="CommunityRankings" class="m-1 btn btn-light btn-outline-primary">Community Rankings</button>
+        </li>
+        <li class="nav-item">
+          <button routerLink="CommunityRankings" class="m-1 btn btn-light btn-outline-primary">Filter Type</button>
+        </li>
+        <li class="nav-item">
+          <button routerLink="CommunityRankings" class="m-1 btn btn-light btn-outline-primary">Generation</button>
+          <!-- <select [(ngModel)]="typeFilter" id="#"> -->
+          <select id="#">
+            <option selected="selected" value="Normal">Normal</option>
+            <option value="Fire">Fire</option>
+            <option value="Water">Water</option>
+            <option value="Grass">Grass</option>
+            <option value="Electric">Electric</option>
+            <option value="Ice">Ice</option>
+            <option value="Fighting">Fighting</option>
+            <option value="Poison">Poison</option>
+            <option value="Ground">Ground</option>
+            <option value="Flying">Flying</option>
+            <option value="Psychic">Psychic</option>
+            <option value="Bug">Bug</option>
+            <option value="Rock">Rock</option>
+            <option value="Ghost">Ghost</option>
+            <option value="Dark">Dark</option>
+            <option value="Dragon">Dragon</option>
+            <option value="Steel">Steel</option>
+            <option value="Fairy">Fairy</option>
+        </select>
+    
+        <!-- <button (click)="GetPokemonRankingsByType(typeFilter)">Filter By Type</button> -->
+        <button>Filter By Type</button>
+
+        </li>
+      </ul>
+    </nav>
+  </div>
     
 <div *ngIf="loggedIn">
     <div *ngIf="currentPokemonRankings.length > 5">
