--- a/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
+++ b/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
@@ -145,7 +145,7 @@
     </div>
 </div> -->
 
-
+<!-- 
 <hr>
 
 
@@ -187,10 +187,10 @@
         <div *ngIf="filteredPokemonDetails[i].game_indices.length > 0 ">
             <p >Original Game: {{filteredPokemonDetails[i].game_indices[0].version.name}}</p>
         </div>
-        <!-- <p>Generation: {{pokemonGenerationID}}</p> -->
-        <p>Pokemon Generation: {{filteredPokemonDetails[i].name}}</p>
+         <p>Generation: {{pokemonGenerationID}}</p> -->
+        <!-- <p>Pokemon Generation: {{filteredPokemonDetails[i].name}}</p>
     </div>
-</div>
+</div> -->
 
 
 <hr>
@@ -229,5 +229,5 @@
     <p>Ranking: {{i + 1}} ({{ranking.userRank}})</p>
     <p>Overall Rank: {{ranking.userRank}}</p>
     <p>PokeDex ID: {{ranking.pokemonApiid}}</p>
-</div>
+</div> -->
 
