--- a/FinalProject/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/FinalProject/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -1,6 +1,6 @@
 <header>
   <nav
-    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3"
+    class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 m-1 btn btn-light btn-outline-primary"
   >
     <div class="container">
       <a class="navbar-brand" [routerLink]="['/']">FinalProject</a>
