--- a/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
+++ b/FinalProject/ClientApp/src/app/pokemon-rankings/pokemon-rankings.component.html
@@ -19,40 +19,56 @@
         <li class="nav-item">
           <button routerLink="CommunityRankings" class="m-1 btn btn-light btn-outline-primary">Community Rankings</button>
         </li>
+
+        <!-- Filter By Type -->
         <li class="nav-item">
-          <button routerLink="CommunityRankings" class="m-1 btn btn-light btn-outline-primary">Filter Type</button>
-        </li>
-        <li class="nav-item">
-          <button routerLink="CommunityRankings" class="m-1 btn btn-light btn-outline-primary">Generation</button>
-          <!-- <select [(ngModel)]="typeFilter" id="#"> -->
-          <select id="#">
-            <option selected="selected" value="Normal">Normal</option>
-            <option value="Fire">Fire</option>
-            <option value="Water">Water</option>
-            <option value="Grass">Grass</option>
-            <option value="Electric">Electric</option>
-            <option value="Ice">Ice</option>
-            <option value="Fighting">Fighting</option>
-            <option value="Poison">Poison</option>
-            <option value="Ground">Ground</option>
-            <option value="Flying">Flying</option>
-            <option value="Psychic">Psychic</option>
-            <option value="Bug">Bug</option>
-            <option value="Rock">Rock</option>
-            <option value="Ghost">Ghost</option>
-            <option value="Dark">Dark</option>
-            <option value="Dragon">Dragon</option>
-            <option value="Steel">Steel</option>
-            <option value="Fairy">Fairy</option>
-        </select>
+            <button routerLink="CommunityRankings" class="m-1 btn btn-light btn-outline-primary">Filter Type</button>
+            <select [(ngModel)]="typeFilter">
+                <option selected="selected" value="Normal">Normal</option>
+                <option value="Fire">Fire</option>
+                <option value="Water">Water</option>
+                <option value="Grass">Grass</option>
+                <option value="Electric">Electric</option>
+                <option value="Ice">Ice</option>
+                <option value="Fighting">Fighting</option>
+                <option value="Poison">Poison</option>
+                <option value="Ground">Ground</option>
+                <option value="Flying">Flying</option>
+                <option value="Psychic">Psychic</option>
+                <option value="Bug">Bug</option>
+                <option value="Rock">Rock</option>
+                <option value="Ghost">Ghost</option>
+                <option value="Dark">Dark</option>
+                <option value="Dragon">Dragon</option>
+                <option value="Steel">Steel</option>
+                <option value="Fairy">Fairy</option>
+            </select>
     
-        <!-- <button (click)="GetPokemonRankingsByType(typeFilter)">Filter By Type</button> -->
-        <button>Filter By Type</button>
+            <button (click)="GetPokemonRankingsByType(typeFilter)">Filter By Type</button>
 
         </li>
-      </ul>
+
+        <!-- Filter by Generation -->
+        <li class="nav-item">
+            <button routerLink="CommunityRankings" class="m-1 btn btn-light btn-outline-primary">Generation</button>
+            <select [(ngModel)]="generationFilter">
+                <option selected="selected" value="1">1</option>
+                <option value="2">2</option>
+                <option value="3">3</option>
+                <option value="4">4</option>
+                <option value="5">5</option>
+                <option value="6">6</option>
+                <option value="7">7</option>
+                <option value="8">8</option>
+                <option value="9">9</option>
+            </select>
+    
+            <button (click)="GetPokemonRankingsByGeneration(generationFilter)">Filter By Generation</button>
+
+        </li>
+    </ul>
     </nav>
-  </div>
+</div>
     
 <div *ngIf="loggedIn">
     <div *ngIf="currentPokemonRankings.length > 5">
@@ -97,6 +113,68 @@
                 <button type="button" class="btn btn-light mr-1" (click)="ToggleFullDetails()">See Full Details</button>
             </td> -->
             <td></td>
+
+            <td>
+                <!-- Button trigger modal -->
+                <!-- data backdrop and data keyboard make it where user can't click outside window to close modal -->
+                <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal" data-backdrop="static" data-keyboard="false">
+                  Edit
+                </button>
+                
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Edit Pokemon Ranking</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <label for="newRank">Enter New Ranking: </label> <br>
+                        <input type="number" min="1" max="151" value="1" placeholder="enter number 1 - 151" [(ngModel)]="editRank" id="newRank"/>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" (click)="EditPokemonRanking(ranking.name, editRank)">Save changes</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </td>
+
+            <td>
+                <!-- Button trigger modal -->
+                <!-- data backdrop and data keyboard make it where user can't click outside window to close modal -->
+                <button type="button" class="btn btn-primary" float-right m-2 data-toggle="modal" data-target="#exampleModal">
+                    Remove
+                </button>
+                
+                <!-- Modal -->
+                <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                  <div class="modal-dialog" role="document">
+                    <div class="modal-content">
+                      <div class="modal-header">
+                        <h5 class="modal-title" id="exampleModalLabel">Remove Pokemon</h5>
+                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                          <span aria-hidden="true">&times;</span>
+                        </button>
+                      </div>
+                      <div class="modal-body">
+                        <h3 class="d-flex justify-content-center">Are you sure you want to remove {{ranking.name}}?</h3>
+                      </div>
+                      <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                        <button type="button" class="btn btn-primary" (click)="DeletePokemonRanking(ranking.name)">Save changes</button>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+            </td>
+
+
+
         </tr>
     </tbody>
 </table>
